package Humanity.Enums;

public enum Condition {
    GOOD,
    INATTENTIVE,
    CONFIDENCE,
    ILL;
    }


