package Subject;

public class Bones  {

    public Bones( ){};

    @Override
    public String toString(){
        return "костей";
    }
}
