package World;

public enum Place {
    TOP,
    FLASHLIGHT,
    CENTRE_OF_HEAP,
    UNKNOWN,
    BORDER
}
