package humans;

public class Author {
    private String comment;
    public Author(){}
    public void comment(String comment){
        System.out.println("Коментарий автора: "+comment);
    }

}
