package humans.enums;


public enum Direction {
    LEFT,
    RIGHT,
    UP,
    DOWN,
}